# litellm-gateway

./: .dockerignore  .env  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.githooks/: commit-msg  pre-commit  pre-push
config/: litellm.backup.yaml  litellm.yaml
deploy/: Dockerfile  docker-compose.yml
deploy/scripts/: start.sh  status.sh  stop.sh  wait-for-health.sh
docs/: can-use-models-list.md  model-routing.md
docs/reports/: model-routing-update.md  quality-report.md
docs/sql/: litellm-usage-queries.sql
docs/workflow/: claude-code-integrations.md  git-hooks-and-commits.md  review-reports.md
tools/: check_prisma.py  quality_checks.py  sync_branches.sh
