[project]
name = "litellm-gateway"
version = "0.1.0"
description = "Engineering wrapper for a LiteLLM gateway deployment"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "litellm[proxy]==1.92.0",
  "prisma==0.15.0",
  "python-dotenv==1.2.2",
  "pyyaml==6.0.3",
]

[dependency-groups]
dev = [
  "ruff>=0.14.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []
